--- a/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/sta_to_explore_notes.html
+++ b/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/sta_to_explore_notes.html
@@ -69,7 +69,8 @@
                     </div>
 
                     <h3 id="CircularEconomy"><b><u>Circular economy:</b></u></h3>
-                    <h3><p>A circular economy is an alternative to traditional linear economy</p>
+                    <h3><p>The circular economy is an economic model designed to minimise waste and make the most of resources by keeping products, materials, and components in use for as long as possible. 
+                        Unlike the traditional linear economy (take-make-dispose), a circular economy focuses on closing the loop through recycling, reusing, repairing, and remanufacturing.</p>
                         
                         <ul>
                         <li>Keep resources as long as possible</li>
@@ -77,6 +78,36 @@
                         <li>Recover and regenerate products and materials at the end of each service life</li>
                         <li>Reduce (materials, waste, pollution), Refurbish, Repair, Recycle</li>
                     </ul></h3>
+
+                    <h3><strong>Key Principles of a Circular Economy</strong></h3>
+
+                    <h3>1. Design Out Waste & Pollution</h3>
+                    <ul>
+                    <li>Products are designed to be <strong>durable, repairable, and recyclable</strong>.</li>
+                    <li>Avoid harmful materials to ensure safe reuse.</li>
+                    </ul>
+
+                    <h3>2. Keep Products & Materials in Use</h3>
+                    <ul>
+                    <li>Extend product lifespans through <strong>maintenance, refurbishment, and sharing</strong>.</li>
+                    <li>Promote <strong>second-hand markets</strong> and <strong>product-as-a-service</strong> models (e.g., leasing instead of buying).</li>
+                    </ul>
+
+                    <h3>3. Regenerate Natural Systems</h3>
+                    <ul>
+                    <li>Use <strong>renewable energy</strong> and <strong>biodegradable materials</strong>.</li>
+                    <li>Return nutrients to the environment (e.g., compostable packaging).</li>
+                    </ul>
+
+                    <h3><strong>Examples of Circular Economy Practices</strong></h3>
+                    <ul>
+                    <li><strong>Recycling</strong> (e.g., turning old plastics into new products)</li>
+                    <li><strong>Repair & Refurbishment</strong> (e.g., fixing electronics instead of discarding them)</li>
+                    <li><strong>Remanufacturing</strong> (e.g., rebuilding car parts for reuse)</li>
+                    <li><strong>Sharing Economy</strong> (e.g., car-sharing, tool rentals)</li>
+                    <li><strong>Biodegradable Materials</strong> (e.g., compostable food packaging)</li>
+                    </ul>
+
                     <h3>Design for maintenance:</h3>
                     <h3><ul>
                         <li>Safer - less likely to fail</li>
