Section C AQA GCSE File setup

--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Designing_and_making/aqa_gcse_design_make_notes_topics/investigation_primary_and_seconary_data.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Designing_and_making/aqa_gcse_design_make_notes_topics/investigation_primary_and_seconary_data.html
@@ -18,7 +18,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_modern_materials.html">Modern materials</a>
+                            <a href="aqa_gcse_design_make_notes_pages/aqa_gcse_use_primary_and_secondary_data_to_understand_clint.html">Use primary and secondary data to understand client and/or user needs</a>
                         </div>
                     </div>
                 </div>
@@ -28,27 +28,17 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_smart_materials.html">Smart materials</a>
+                            <a href="aqa_gcse_design_make_notes_pages/aqa_gcse_how_to_write_a_design_brief_and_produce_a_design.html">How to write a design brief and produce a design and manufacturing specifcation</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio3.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio2.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_composite_materials.html">Composite materials</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio12.jpg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="blurbox">
-                            <!-- <a href="Notes\DigitalTechnologies.html">Digital Technologies</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_technical_textiles.html">Technical textiles</a>
+                            <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
+                            <a href="aqa_gcse_design_make_notes_pages/aqa_gcse_carry_out_investigations_in_order_to_identify_problems.html">Carry out investigations in order to identfy problems and needs</a>
                         </div>
                     </div>
                 </div>
