--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Designing_and_making/aqa_gcse_design_make_notes_topics/design_strategies.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Designing_and_making/aqa_gcse_design_make_notes_topics/design_strategies.html
@@ -18,7 +18,8 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_modern_materials.html">Modern materials</a>
+                            <a href="aqa_gcse_design_make_notes_pages/aqa_gcse_generate_imaginative_and_creative_design_ideas_using_a.html">Generate imaginative and creative design ideas using a range of different design
+                                strategies</a>
                         </div>
                     </div>
                 </div>
@@ -28,27 +29,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_smart_materials.html">Smart materials</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio3.jpg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="blurbox">
-                            <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_composite_materials.html">Composite materials</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio12.jpg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="blurbox">
-                            <!-- <a href="Notes\DigitalTechnologies.html">Digital Technologies</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_technical_textiles.html">Technical textiles</a>
+                            <a href="aqa_gcse_design_make_notes_pages/aqa_gcse_explore_and_develop_their_own_ideas.html">Explore and develop their own ideas</a>
                         </div>
                     </div>
                 </div>
