--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Designing_and_making/aqa_gcse_design_make_notes_topics/aqa_gcse_design_make_notes_pages/aqa_gcse_how_to_write_a_design_brief_and_produce_a_design.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Designing_and_making/aqa_gcse_design_make_notes_topics/aqa_gcse_design_make_notes_pages/aqa_gcse_how_to_write_a_design_brief_and_produce_a_design.html
@@ -8,22 +8,169 @@
     <div class="containter">
         <div class="notes-content-wrapper">
             <div class="notes-content-header" style="background-image:url(/images/note_pic.jpg)" title="metal background">
-                <h1 style="color:rgb(0, 0, 0)"><u><b>#############</b></u></h1>
+                <h1 style="color:rgb(0, 0, 0)"><u><b>How to write a design brief and produce a design and manufacturing specifcation</b></u></h1>
             </div>
 
             <div class="notes-content">
+                <h3><strong><u>What needs to be covered in a design brief?</u></strong></h3>
 
-                <h3 id="WorkplaceDesign"><b><u>Workplace Design & Organisation:</b></u></h3>
+                <h4><b>1. Project Definition</b></h4>
                 <h3><ul>
-                    <li><b>Collaborative Spaces:</b> Open-plan offices with IoT environmental controls (e.g., Philips Smart Lighting)</li>
-                    <li><b>Automation Integration:</b> Amazon warehouses using Kiva robots reducing human walking by 80%</li>
-                    <li><b>Remote Work Tech:</b> VR meeting spaces like Meta Horizon Workrooms replacing physical offices</li>
-                    <li><b>Safety Systems:</b> Computer vision monitoring fatigue (e.g., SmartCap for mining operators)</li>
+                    <li><b>Scope & Purpose</b>
+                        <ul>
+                            <li>Concise problem statement (e.g., "Design ergonomic garden tools for arthritis patients")</li>
+                            <li>Clear boundaries of what's included/excluded</li>
+                        </ul>
+                    </li>
+                    <li><b>Background Rationale</b>
+                        <ul>
+                            <li>Market gap analysis</li>
+                            <li>User pain points identified through research</li>
+                        </ul>
+                    </li>
+                </ul></h3>
+
+                <h4><b>2. Core Objectives</b></h4>
+                <h3><ul>
+                    <li><b>Primary Goals</b>
+                        <ul>
+                            <li>Functional: "Reduce required grip strength by 40%"</li>
+                            <li>User experience: "Achieve 90% comfort rating in trials"</li>
+                        </ul>
+                    </li>
+                    <li><b>Success Metrics</b>
+                        <ul>
+                            <li>Quantifiable targets with measurement methods</li>
+                            <li>Example: "15% faster task completion in timed tests"</li>
+                        </ul>
+                    </li>
+                </ul></h3>
+
+                <h4><b>3. Target Users</b></h4>
+                <h3><ul>
+                    <li><b>Detailed Personas</b>
+                        <ul>
+                            <li>Demographics: Age 65+, limited hand mobility</li>
+                            <li>Behavioural patterns: Weekly gardening habits</li>
+                        </ul>
+                    </li>
+                    <li><b>Inclusive Considerations</b>
+                        <ul>
+                            <li>Accessibility requirements</li>
+                            <li>Cultural/regional usage factors</li>
+                        </ul>
+                    </li>
+                </ul></h3>
+
+                <h4><b>4. Budget & Resources</b></h4>
+                <h3><ul>
+                    <li><b>Financial Plan</b>
+                        <ul>
+                            <li>Total budget: £XX,XXX breakdown</li>
+                            <li>Prototyping: 40% | Testing: 25% | Production: 35%</li>
+                        </ul>
+                    </li>
+                    <li><b>Resource Allocation</b>
+                        <ul>
+                            <li>Materials sourcing strategy</li>
+                            <li>Specialist consultancy requirements</li>
+                        </ul>
+                    </li>
+                </ul></h3>
+
+                <h4><b>5. Timeline & Deliverables</b></h4>
+                <h3><ul>
+                    <li><b>Phased Schedule</b>
+                        <ul>
+                            <li>Research phase: 4 weeks (incl. user interviews)</li>
+                            <li>Prototype development: 6 weeks (3 iterations)</li>
+                            <li>User testing: 3 weeks (50 participants)</li>
+                        </ul>
+                    </li>
+                    <li><b>Tangible Outputs</b>
+                        <ul>
+                            <li>Phase 1: User research report + CAD concepts</li>
+                            <li>Phase 2: 3D printed prototypes + testing data</li>
+                        </ul>
+                    </li>
                 </ul></h3>
 
                 <div class="notes-content-subheader">
                     <h2><hr><hr></h2>
                 </div>
+
+                <h3><strong><u>How to write a design and manufacturing specification</u></strong></h3>
+
+                <h4><b>1. Technical Product Specification</b></h4>
+                <h3><ul>
+                    <li><b>Dimensional Requirements</b>
+                        <ul>
+                            <li>Critical measurements with tolerances (e.g., "Grip diameter: 35mm ±0.5mm")</li>
+                            <li>Weight restrictions and balance points</li>
+                        </ul>
+                    </li>
+                    <li><b>Material Specifications</b>
+                        <ul>
+                            <li>Precise material grades (e.g., "Polypropylene, 30% glass-filled")</li>
+                            <li>Surface finish requirements (texture, roughness values)</li>
+                        </ul>
+                    </li>
+                </ul></h3>
+
+                <h4><b>2. Production Requirements</b></h4>
+                <h3><ul>
+                    <li><b>Manufacturing Processes</b>
+                        <ul>
+                            <li>Specific methods (e.g., "Injection moulding - 2 cavity tool")</li>
+                            <li>Cycle time targets and output rates</li>
+                        </ul>
+                    </li>
+                    <li><b>Assembly Instructions</b>
+                        <ul>
+                            <li>Step-by-step assembly sequence</li>
+                            <li>Fastening torque values where applicable</li>
+                        </ul>
+                    </li>
+                </ul></h3>
+
+                <h4><b>3. Quality Control Standards</b></h4>
+                <h3><ul>
+                    <li><b>Testing Protocols</b>
+                        <ul>
+                            <li>Performance tests (e.g., "5000 cycle durability test")</li>
+                            <li>Safety certifications required (BS/EN standards)</li>
+                        </ul>
+                    </li>
+                    <li><b>Inspection Criteria</b>
+                        <ul>
+                            <li>Visual inspection standards</li>
+                            <li>Sampling frequency for dimensional checks</li>
+                        </ul>
+                    </li>
+                </ul></h3>
+
+                <h4><b>4. Compliance Documentation</b></h4>
+                <h3><ul>
+                    <li><b>Regulatory Requirements</b>
+                        <ul>
+                            <li>UKCA/CE marking specifications</li>
+                            <li>Product safety directives</li>
+                        </ul>
+                    </li>
+                    <li><b>Sustainability Targets</b>
+                        <ul>
+                            <li>Recyclability percentages</li>
+                            <li>Carbon footprint reduction goals</li>
+                        </ul>
+                    </li>
+                </ul></h3>
+
+                <h4><b>Key Connections Between Brief and Specification</b></h4>
+                <h3><ul>
+                    <li>User requirements from brief directly inform technical specifications</li>
+                    <li>Budget constraints determine material and process selections</li>
+                    <li>Timeline impacts tooling complexity and production planning</li>
+                </ul></h3>
 
                 
 
