--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Designing_and_making/aqa_gcse_design_make_notes_topics/aqa_gcse_design_make_notes_pages/aqa_gcse_use_primary_and_secondary_data_to_understand_clint.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Designing_and_making/aqa_gcse_design_make_notes_topics/aqa_gcse_design_make_notes_pages/aqa_gcse_use_primary_and_secondary_data_to_understand_clint.html
@@ -83,7 +83,7 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A1/3.1.1_Industry.pdf">###### Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section C - Designing and making principles/Topic C1/3.3.1_use_primary_and_secondary_data_to_understand_client_and_or_user_needs.pdf">Use primary and secondary data to understand client and/or user needs Questions</a>
                 </div> 
             </div>
         </div>
