--- a/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/sta_to_explore_notes.html
+++ b/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/sta_to_explore_notes.html
@@ -74,7 +74,7 @@
                         
                         <ul>
                         <li>Keep resources as long as possible</li>
-                        <li>Extract the maximum value from them whilst in ise</li>
+                        <li>Extract the maximum value from them whilst in use</li>
                         <li>Recover and regenerate products and materials at the end of each service life</li>
                         <li>Reduce (materials, waste, pollution), Refurbish, Repair, Recycle</li>
                     </ul></h3>
