--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Designing_and_making/aqa_gcse_design_make_notes_topics/aqa_gcse_design_make_notes_pages/aqa_gcse_how_to_write_a_design_brief_and_produce_a_design.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Designing_and_making/aqa_gcse_design_make_notes_topics/aqa_gcse_design_make_notes_pages/aqa_gcse_how_to_write_a_design_brief_and_produce_a_design.html
@@ -177,7 +177,7 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A1/3.1.1_Industry.pdf">###### Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section C - Designing and making principles/Topic C1/3.3.1_how_to_write_a_design_brief_and_produce_a_design_and_manufac_spec.pdf">How to write a design brief and produce a design and manufacturing specifcation Questions</a>
                 </div> 
             </div>
         </div>
