--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Designing_and_making/aqa_gcse_design_make_notes_topics/aqa_gcse_design_make_notes_pages/aqa_gcse_carry_out_investigations_in_order_to_identify_problems.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Designing_and_making/aqa_gcse_design_make_notes_topics/aqa_gcse_design_make_notes_pages/aqa_gcse_carry_out_investigations_in_order_to_identify_problems.html
@@ -71,7 +71,7 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A1/3.1.1_Industry.pdf">Carry out investigations in order to identfy problems and needs Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section C - Designing and making principles/Topic C1/3.3.1_carry_out_investigations_in_order_to_identify_problems_and_needs.pdf">Carry out investigations in order to identfy problems and needs Questions</a>
                 </div> 
             </div>
         </div>
