--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/feasibility_studies.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/feasibility_studies.html
@@ -8,8 +8,7 @@
         <div class="container">
             <div class="notes-content-wrapper">
                 <div class="notes-content-header" style="background-image:url(/images/matnoteComposite.jpg)" title="EPOS background">
-                    <h1 style="color:white"><u><b>Feasibility studies
-                    </b></u></h1>
+                    <h1 style="color:white"><u><b>Feasibility studies</b></u></h1>
                 </div><br>
 
             <div class="notes-content">
@@ -50,6 +49,12 @@
                     <li>Improves decision-making by providing data on technical, financial, and market considerations.</li>
                     <li>Increases the chances of successful product launch by refining designs and addressing consumer needs.</li>
                 </ul><br>
+
+                <h3><b>Topic test:</b></h3>
+
+                            <div class="blurbox" style="background-color: #bdbdbd;">
+                                <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A12/3.1.12_feasibility_studies.pdf">Feasibility studies Questions</a>
+                            </div>
             </div>
         </div>
 
