--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Designing_and_making/aqa_gcse_design_make_notes_topics/aqa_gcse_design_make_notes_pages/aqa_gcse_environmental_social_and_economic_challenge.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Designing_and_making/aqa_gcse_design_make_notes_topics/aqa_gcse_design_make_notes_pages/aqa_gcse_environmental_social_and_economic_challenge.html
@@ -8,18 +8,122 @@
     <div class="containter">
         <div class="notes-content-wrapper">
             <div class="notes-content-header" style="background-image:url(/images/note_pic.jpg)" title="metal background">
-                <h1 style="color:rgb(0, 0, 0)"><u><b>#############</b></u></h1>
+                <h1 style="color:rgb(0, 0, 0)"><u><b>Environmental, social and economic challenge</b></u></h1>
             </div>
 
             <div class="notes-content">
 
-                <h3 id="WorkplaceDesign"><b><u>Workplace Design & Organisation:</b></u></h3>
+                <h3 id="EnvironmentalChallenges"><b><u></b></u></h3>
+
+                <!-- DEFORESTATION SECTION -->
                 <h3><ul>
-                    <li><b>Collaborative Spaces:</b> Open-plan offices with IoT environmental controls (e.g., Philips Smart Lighting)</li>
-                    <li><b>Automation Integration:</b> Amazon warehouses using Kiva robots reducing human walking by 80%</li>
-                    <li><b>Remote Work Tech:</b> VR meeting spaces like Meta Horizon Workrooms replacing physical offices</li>
-                    <li><b>Safety Systems:</b> Computer vision monitoring fatigue (e.g., SmartCap for mining operators)</li>
+                    <li><b>Deforestation:</b>
+                        <ul>
+                            <li><b>What It Is:</b>
+                                <ul>
+                                    <li>Permanent removal of forests for timber, agriculture, or urban development</li>
+                                    <li><i>Example:</i> The Amazon loses an area the size of 1.4 million football pitches annually</li>
+                                </ul>
+                            </li>
+                            <li><b>Why It's Bad:</b>
+                                <ul>
+                                    <li><i>Environmental:</i> Causes 15% of global CO₂ emissions (more than all transport combined)</li>
+                                    <li><i>Social:</i> Displaces indigenous communities like the Kayapo people in Brazil</li>
+                                    <li><i>Economic:</i> Leads to long-term soil degradation, reducing land value</li>
+                                </ul>
+                            </li>
+                            <li><b>How It Happens:</b>
+                                <ul>
+                                    <li><i>Logging:</i> Illegal timber trade drives 90% of tropical deforestation</li>
+                                    <li><i>Agriculture:</i> Cattle ranching causes 80% of Amazon deforestation</li>
+                                    <li><i>Infrastructure:</i> Roads like Brazil's BR-319 enable deeper forest destruction</li>
+                                </ul>
+                            </li>
+                            <li><b>Design Impacts:</b>
+                                <ul>
+                                    <li><i>Constraints:</i> FSC certification increases material costs by 10-15%</li>
+                                    <li><i>Opportunities:</i> Fast-growing bamboo for furniture (30x faster than oak)</li>
+                                    <li><i>Innovation:</i> 3D-printed wood alternatives using sawdust waste</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <div class="notes-content-subheader">
+                        <h2><hr><hr></h2>
+                    </div>
+
+                <!-- CARBON DIOXIDE & GLOBAL WARMING SECTION -->
+                    <li><b>CO₂ & Global Warming:</b>
+                        <ul>
+                            <li><b>What It Is:</b>
+                                <ul>
+                                    <li>Excessive CO₂ trapping heat in the atmosphere, causing climate change</li>
+                                    <li><i>Example:</i> CO₂ levels rose from 280ppm (pre-industrial) to 420ppm today</li>
+                                </ul>
+                            </li>
+                            <li><b>Why It's Bad:</b>
+                                <ul>
+                                    <li><i>Environmental:</i> Melting ice caps could raise sea levels by 1m by 2100</li>
+                                    <li><i>Social:</i> Increased natural disasters displace 20 million/year already</li>
+                                    <li><i>Economic:</i> Climate damage may cost $23 trillion/year by 2050</li>
+                                </ul>
+                            </li>
+                            <li><b>How It Happens:</b>
+                                <ul>
+                                    <li><i>Manufacturing:</i> Producing 1kg of plastic emits 6kg of CO₂</li>
+                                    <li><i>Transport:</i> A single transatlantic flight emits 1 ton CO₂/passenger</li>
+                                    <li><i>Energy Use:</i> 60% of UK emissions come from heating buildings</li>
+                                </ul>
+                            </li>
+                            <li><b>Design Impacts:</b>
+                                <ul>
+                                    <li><i>Constraints:</i> UK Climate Change Act requires net-zero designs by 2050</li>
+                                    <li><i>Opportunities:</i> Carbon-negative materials like hempcrete</li>
+                                    <li><i>Innovation:</i> Autodesk's EC3 tool tracks embodied carbon in BIM models</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <div class="notes-content-subheader">
+                        <h2><hr><hr></h2>
+                    </div>
+
+                <!-- FAIR TRADE SECTION -->
+                    <li><b>Fair Trade:</b>
+                        <ul>
+                            <li><b>What It Is:</b>
+                                <ul>
+                                    <li>Ethical trading system ensuring fair wages and safe working conditions</li>
+                                    <li><i>Example:</i> Fairtrade cotton farmers earn 20% more than conventional</li>
+                                </ul>
+                            </li>
+                            <li><b>Why It's Important:</b>
+                                <ul>
+                                    <li><i>Social:</i> Prevents child labor (152 million children affected globally)</li>
+                                    <li><i>Economic:</i> Provides stable incomes for 1.7 million farmers worldwide</li>
+                                    <li><i>Environmental:</i> 74% of Fairtrade farms use sustainable practices</li>
+                                </ul>
+                            </li>
+                            <li><b>How It Works:</b>
+                                <ul>
+                                    <li><i>Certification:</i> Requires minimum price guarantees and community premiums</li>
+                                    <li><i>Supply Chains:</i> Complex audits track materials from source to product</li>
+                                    <li><i>Consumer Demand:</i> UK Fairtrade sales grew 14% in 2022 despite inflation</li>
+                                </ul>
+                            </li>
+                            <li><b>Design Impacts:</b>
+                                <ul>
+                                    <li><i>Constraints:</i> Fairtrade cotton adds 15-20% to material costs</li>
+                                    <li><i>Opportunities:</i> Blockchain tracing (e.g., IBM Food Trust for cocoa)</li>
+                                    <li><i>Innovation:</i> Fairphone's modular design extends device lifespan</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
                 </ul></h3>
+
 
                 <div class="notes-content-subheader">
                     <h2><hr><hr></h2>
@@ -30,7 +134,7 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A1/3.1.1_Industry.pdf">###### Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A1/3.1.1_Industry.pdf">Environmental, social and economic challenge Questions</a>
                 </div> 
             </div>
         </div>
