--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Designing_and_making/aqa_gcse_design_make_notes_topics/aqa_gcse_design_make_notes_pages/aqa_gcse_environmental_social_and_economic_challenge.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Designing_and_making/aqa_gcse_design_make_notes_topics/aqa_gcse_design_make_notes_pages/aqa_gcse_environmental_social_and_economic_challenge.html
@@ -134,7 +134,7 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A1/3.1.1_Industry.pdf">Environmental, social and economic challenge Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section C - Designing and making principles/Topic C2/3.3.2_environmental_social_and_economic_challenge.pdf">Environmental, social and economic challenge Questions</a>
                 </div> 
             </div>
         </div>
