--- a/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/aqa_gcse_exercises.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/aqa_gcse_exercises.html
@@ -37,7 +37,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="/">Section B: Specialist technical principles Questions</a>
+                            <a href="/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Specialist_technical_principles/aqa_spec_prin_gcse_exercises.html">Section B: Specialist technical principles Questions</a>
                         </div>
                     </div>
                 </div>
