--- a/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Specialist_technical_principles/aqa_gcse_spec_prin_exercise_topics/ecological_and_social_footprint.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Specialist_technical_principles/aqa_gcse_spec_prin_exercise_topics/ecological_and_social_footprint.html
@@ -18,7 +18,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A3/3.1.3_modern_materials.pdf">Modern materials Questions</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section B - Specialist technical principles/Topic B3/3.2.3_ecological_issues_in_the_design_and_manufacture_of_products.pdf">Ecological issues in the design and manufacture of products Questions</a>
                         </div>
                     </div>
                 </div>
@@ -28,7 +28,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_smart_materials.html">Smart materials</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section B - Specialist technical principles/Topic B3/3.2.3_the_six_Rs.pdf">The six Rs Questions</a>
                         </div>
                     </div>
                 </div>
@@ -38,17 +38,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_composite_materials.html">Composite materials</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio12.jpg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="blurbox">
-                            <!-- <a href="Notes\DigitalTechnologies.html">Digital Technologies</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_technical_textiles.html">Technical textiles</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section B - Specialist technical principles/Topic B3/3.2.3_social_issues_in_design_and_manufacture_of_products.pdf">Social issues in the design and manufacture of products Questions</a>
                         </div>
                     </div>
                 </div>
