--- a/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Specialist_technical_principles/aqa_gcse_spec_prin_exercise_topics/specialist_techniques_and_processes.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Specialist_technical_principles/aqa_gcse_spec_prin_exercise_topics/specialist_techniques_and_processes.html
@@ -18,7 +18,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A3/3.1.3_modern_materials.pdf">Modern materials Questions</a>
+                            <a href="aqa_gcse_spec_prin_notes_pages/aqa_gcse_the_use_of_production_aids.html">The use of production aids</a>
                         </div>
                     </div>
                 </div>
@@ -28,7 +28,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_smart_materials.html">Smart materials</a>
+                            <a href="aqa_gcse_spec_prin_notes_pages/aqa_gcse_tools_equipment_and_processes.html">Tools, equipment and processes</a>
                         </div>
                     </div>
                 </div>
@@ -38,7 +38,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_composite_materials.html">Composite materials</a>
+                            <a href="aqa_gcse_spec_prin_notes_pages/aqa_gcse_how_materials_are_cut_shaped_and_formed_to_a_tol.html">How materials are cut shaped and formed to a tolerance</a>
                         </div>
                     </div>
                 </div>
@@ -48,7 +48,18 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\DigitalTechnologies.html">Digital Technologies</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_technical_textiles.html">Technical textiles</a>
+                            <a href="aqa_gcse_spec_prin_notes_pages/aqa_gcse_commercial_processes.html">Commercial processes</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio12.jpg)"></div>
+                    <div class="img-text-wrapper">
+                        <div class="blurbox">
+                            <!-- <a href="Notes\DigitalTechnologies.html">Digital Technologies</a> -->
+                            <a href="aqa_gcse_spec_prin_notes_pages/aqa_gcse_quality_control.html">Quality control
+                            </a>
                         </div>
                     </div>
                 </div>
