--- a/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Specialist_technical_principles/aqa_gcse_spec_prin_exercise_topics/using_and_working_with_materials.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Specialist_technical_principles/aqa_gcse_spec_prin_exercise_topics/using_and_working_with_materials.html
@@ -18,7 +18,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A3/3.1.3_modern_materials.pdf">Modern materials Questions</a>
+                            <a href="aqa_gcse_spec_prin_notes_pages/aqa_gcse_properties_of_materials.html">Properties of materials</a>
                         </div>
                     </div>
                 </div>
@@ -28,7 +28,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_smart_materials.html">Smart materials</a>
+                            <a href="aqa_gcse_spec_prin_notes_pages/aqa_gcse_the_modification_of_properties_for_specific_purp.html">The modifcation of properties for specifc purposes</a>
                         </div>
                     </div>
                 </div>
@@ -38,17 +38,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_composite_materials.html">Composite materials</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio12.jpg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="blurbox">
-                            <!-- <a href="Notes\DigitalTechnologies.html">Digital Technologies</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_technical_textiles.html">Technical textiles</a>
+                            <a href="aqa_gcse_spec_prin_notes_pages/aqa_gcse_how_to_shape_and_form_using_cutting_abrasion_and_additi.html">How to shape and form using cutting, abrasion and addition</a>
                         </div>
                     </div>
                 </div>
